# wqimage

./: .clangd  .gitignore  flake.nix  meson.build  meson.options  wqimage.version
headers/weqeqq/: image.h
headers/weqeqq/image/: adjustments.h  blending.h  buffer.h  color_conversion.h  config.h  crop.h  decoding.h  encoding.h  error.h  export.h
sources/: adjustments.cc  blending.cc  color_conversion.cc  crop.cc  decoding.cc  encoding.cc
subprojects/: highway.wrap  wqcolor.wrap  wqerror.wrap  wqfile.wrap  wqparallel.wrap  wqpng.wrap
tests/: adjustments_test.cc  blending_test.cc  buffer_test.cc  codec_error_test.cc  crop_test.cc
